; ModuleID = '/home/carl/AnghaBench/git/extr_dir.c_cmp_icase.c'
source_filename = "/home/carl/AnghaBench/git/extr_dir.c_cmp_icase.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ignore_case = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8, i8)* @cmp_icase to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmp_icase(i8 signext %0, i8 signext %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8, align 1
  %5 = alloca i8, align 1
  store i8 %0, i8* %4, align 1
  store i8 %1, i8* %5, align 1
  %6 = load i8, i8* %4, align 1
  %7 = sext i8 %6 to i32
  %8 = load i8, i8* %5, align 1
  %9 = sext i8 %8 to i32
  %10 = icmp eq i32 %7, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %27

12:                                               ; preds = %2
  %13 = load i64, i64* @ignore_case, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %12
  %16 = load i8, i8* %4, align 1
  %17 = call i32 @toupper(i8 signext %16)
  %18 = load i8, i8* %5, align 1
  %19 = call i32 @toupper(i8 signext %18)
  %20 = sub nsw i32 %17, %19
  store i32 %20, i32* %3, align 4
  br label %27

21:                                               ; preds = %12
  %22 = load i8, i8* %4, align 1
  %23 = sext i8 %22 to i32
  %24 = load i8, i8* %5, align 1
  %25 = sext i8 %24 to i32
  %26 = sub nsw i32 %23, %25
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %21, %15, %11
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @toupper(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
